manifests/polkadot-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: polkadot
  name: polkadot
spec:
  ports:
    - name: "p2p"
      port: 30333
      targetPort: 30333
    - name: "rpc"
      port: 9933
      targetPort: 9933
    - name: "ws"
      port: 9944
      targetPort: 9944
  selector:
    io.kompose.service: polkadot
status:
  loadBalancer: {}
